Stop relying on Commons Lang 2 from Jenkins core
Jenkins 2.579 removed Commons Lang 2 from core (jenkinsci/jenkins#26105).
assignLabel called StringUtils.isBlank, so on 2.579 and later every job
with this property failed at queue time with NoClassDefFoundError:
org/apache/commons/lang/StringUtils, and buildWithParameters answered 500.

Use String#isBlank instead, without adding a dependency. The tests used
StringUtils.join as well; use String#join.
testFreeStyleProjectWithGroovyLabelAssignmentProperty already covers
scripts returning "", "  " and null.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>